Archive2/af/a4f29408377df9/output
main.cpp:7:9: error: field has incomplete type 'int []'
    int array[], size;
        ^
1 error generated.
